finish all en version

--- a/index.html
+++ b/index.html
@@ -21,24 +21,21 @@
     <div class="regular-content">
       <img src="img/18.svg" alt="age" class="mb-25">
       <h2 class="regular-subtitle mb-32">
-        ԽՆԴՐՈՒՄ ԵՆՔ <br>
-        ՀԱՍՏԱՏԵԼ, ՈՐ ԴՈՒՔ <br>
-        ՀԱՆԴԻՍԱՆՈՒՄ ԵՔ 18 <br>
-        ՏԱՐԵԿԱՆ ԾԽՈՂ ԱՆՁ
+        PLEASE CONFIRM THAT YOU ARE <br> 18+ SMOKER
       </h2>
       <form>
         <div class="radio-holder">
           <label class="form-control">
             <input type="radio" name="radio" checked />
-            ՀԱՍՏԱՏՈՒՄ ԵՄ
+            YES, I CONFIRM
           </label>
           <label class="form-control">
             <input type="radio" name="radio" />
-            ՉԵՄ ՀԱՍՏԱՏՈՒՄ
+            NO, I DON'T CONFIRM
           </label>
         </div>
       </form>
-      <a href="#" class="link">Ապաժանորդագրվել</a>
+      <a href="#" class="link">Unsubscribe here</a>
     </div>
   </div>
 </main>
