--- a/page2.html
+++ b/page2.html
@@ -24,18 +24,15 @@
             <div class="swiper-slide item-slider">
               <img src="img/superSlimsFantasy.png" alt="slider-image" class="slider-image">
               <p class="slider-text">
-                Monte Carlo-ի տուփերի վրա <br>
-                նկատե՞լ եք փոփոխություն։
+                Have you noticed any changes <br>in Monte Carlo packs?
               </p>
             </div>
             <div class="swiper-slide item-slider">
               <img src="img/superSlimsSilk.png" alt="slider-image" class="slider-image">
               <p class="slider-text">
-                Monte Carlo ապրանքանիշի՝ <br>
-                Winston-ի մաս դառնալու <br>
-                գործընթացում ո՞րն է Ձեզ <br>
-                համար ամենակարևոր <br>
-                գործոնը։
+                What’s most important to you when <br>
+                considering the transition from <br>
+                Monte Carlo to Winston?
               </p>
             </div>
           </div>
@@ -44,8 +41,8 @@
       </div>
       <div class="regular-content">
         <div class="buttons-wrap">
-          <button class="btn">ԱՅՈ</button>
-          <button class="btn">ՈՉ</button>
+          <button class="btn">YES</button>
+          <button class="btn">NO</button>
         </div>
       </div>
     </div>
