--- a/page4.html
+++ b/page4.html
@@ -18,14 +18,13 @@
 <main class="main-bg">
   <div class="container">
     <div class="regular-content">
-      <h1 class="regular-title mb-74">
-        Monte Carlo-ն նոր <br>
-        փաթեթավորմամբ
+      <h1 class="regular-title mb-81">
+        Monte Carlo new <br> packaging
       </h1>
       <div class="image-holder">
         <img src="img/slimsGroup.png" alt="image">
       </div>
-      <button class="btn">հաջորդ</button>
+      <button class="btn">Next</button>
     </div>
   </div>
 </main>
