--- a/page5.html
+++ b/page5.html
@@ -19,31 +19,27 @@
   <div class="container">
     <div class="regular-content">
       <h1 class="regular-title mb-30">
-        ՇՆՈՐՀԱԿԱԼՈՒԹՅՈՒՆ <br>
-        ՀԱՐՑՄԱՆԸ <br>
-        ՄԱՍՆԱԿՑԵԼՈՒ <br>
-        ՀԱՄԱՐ
+        THANK YOU <br>
+        FOR PARTICIPATING <br>
+        IN THE SURVEY
       </h1>
       <img src="img/icons/phone.svg" alt="app" class="mb-30">
       <p class="regular-text mb-25">
-        Եթե 24 ժամվա ընթացքում <br>
-        չստանաք լիցքավորումը, խնդրում <br>
-        ենք կապ հաստատել <br>
-        հետևյալ էլ.փոստով
+        If you do not receive the refill <br>
+        within 24 hours, please contact <br>
+        by the following email <br>
         <a href="mailto:marketingservices@jti.com" class="mail-link">marketingservices@jti.com</a>
       </p>
       <p class="regular-text mb-30">
-        Հարցմանը կարող եք մասնակցել <br>
-        առավելագույնը 1 անգամ
+        You can participate in the survey <br> maximum 1 time
        </p>
       <img src="img/platform.png" alt="platform j">
-      <p class="regular-text mb-25">
-        ՄԵՆՔ ՀՐԱՎԻՐՈՒՄ ԵՆՔ ՁԵԶ <br>
-        <span>J PLATFORM</span>, ՈՐՏԵՂ ԿԱՐՈՂ ԵՔ <br>
-        ՄԱՍՆԱԿՑԵԼ ՀԱՐՑՈՒՄՆԵՐԻՆ ԵՎ <br>
-        ՍՏԱՆԱԼ ՄԻԱՎՈՐՆԵՐ
+      <p class="regular-text mb-30">
+        WE INVITE YOU TO NEW  <span>J PLATFORM</span>, <br>
+        WHERE YOU CAN PARTICIPATE <br>
+        IN SURVEYS AND RECEIVE POINTS
       </p>
-      <button class="btn">ՄԻԱՆԱԼ</button>
+      <button class="btn">JOIN</button>
     </div>
   </div>
 </main>
