--- a/page6.html
+++ b/page6.html
@@ -19,23 +19,22 @@
   <div class="container">
     <div class="regular-content">
       <h1 class="regular-title mb-30">
-        ԴՈՒՔ ԱՐԴԵՆ <br>
-        ՄԱՍՆԱԿՑԵԼ ԵՔ <br>
-        ՀԱՐՑՄԱՆԸ 1 ԱՆԳԱՄ
+        YOU HAVE ALREADY <br>
+        PARTICIPATED <br>
+        IN THE SURVEY 1 TIME
       </h1>
       <img src="img/icons/star.svg" alt="app" class="mb-30">
       <p class="regular-text mb-25">
-        Հարցմանը կարող եք մասնակցել <br>
-        առավելագույնը 1 անգամ։
+        You can participate in the survey <br>
+        maximum 1 time
       </p>
       <img src="img/platform.png" alt="platform j">
-      <p class="regular-text mb-25">
-        ՄԵՆՔ ՀՐԱՎԻՐՈՒՄ ԵՆՔ ՁԵԶ <br>
-        <span>J PLATFORM</span>, ՈՐՏԵՂ ԿԱՐՈՂ ԵՔ <br>
-        ՄԱՍՆԱԿՑԵԼ ՀԱՐՑՈՒՄՆԵՐԻՆ ԵՎ <br>
-        ՍՏԱՆԱԼ ՄԻԱՎՈՐՆԵՐ
+      <p class="regular-text mb-30">
+        WE INVITE YOU TO NEW  <span>J PLATFORM</span>, <br>
+        WHERE YOU CAN PARTICIPATE <br>
+        IN SURVEYS AND RECEIVE POINTS
       </p>
-      <button class="btn">ՄԻԱՆԱԼ</button>
+      <button class="btn">JOIN</button>
     </div>
   </div>
 </main>
