--- a/page7.html
+++ b/page7.html
@@ -15,25 +15,23 @@
 </head>
 
 <body>
-<main class="main-bg">
+<main class="main-bg pt-124">
   <div class="container">
     <div class="regular-content">
-      <h1 class="regular-title mb-30">
-        ՀԱՐՑՈՒՄՆ <br>
-        ԱՎԱՐՏՎԱԾ Է
+      <h1 class="regular-title mb-68">
+        THE SURVEY IS OVER
       </h1>
       <img src="img/icons/notice.svg" alt="app" class="mb-30">
       <p class="regular-text mb-25">
-        Շնորհակալ ենք մասնակցելու <br> համար
+        Thank you for your time
       </p>
       <img src="img/platform.png" alt="platform j">
-      <p class="regular-text mb-25">
-        ՄԵՆՔ ՀՐԱՎԻՐՈՒՄ ԵՆՔ ՁԵԶ <br>
-        <span>J PLATFORM</span>, ՈՐՏԵՂ ԿԱՐՈՂ ԵՔ <br>
-        ՄԱՍՆԱԿՑԵԼ ՀԱՐՑՈՒՄՆԵՐԻՆ ԵՎ <br>
-        ՍՏԱՆԱԼ ՄԻԱՎՈՐՆԵՐ
+      <p class="regular-text mb-30">
+        WE INVITE YOU TO NEW  <span>J PLATFORM</span>, <br>
+        WHERE YOU CAN PARTICIPATE <br>
+        IN SURVEYS AND RECEIVE POINTS
       </p>
-      <button class="btn">ՄԻԱՆԱԼ</button>
+      <button class="btn">JOIN</button>
     </div>
   </div>
 </main>
