--- a/page8.html
+++ b/page8.html
@@ -15,22 +15,23 @@
 </head>
 
 <body>
-<main class="main-bg">
+<main class="main-bg pt-124">
   <div class="container">
     <div class="regular-content">
-      <h1 class="regular-title small-mode mb-30">
-        Ապաբաժանորդագրվել
+      <h1 class="regular-title small-mode mb-68">
+        Unsubscribe
       </h1>
       <img src="img/icons/mail.svg" alt="app" class="mb-30">
-      <p class="regular-text mb-25">
-        Շնորհակալ ենք մասնակցելու <br> համար
+      <p class="regular-text mb-40">
+        Please tell us why do you <br>
+        want to unsubscribe:
       </p>
       <div class="buttons-wrap">
-        <button class="btn">Չափազանց շատ <br> հաղորդագրություններ եմ ստանում</button>
-        <button class="btn">Հետաքրքրված չեմ նմանատիպ <br> հարցումներով</button>
-        <button class="btn">Երբևէ չեմ բաժանորդագրվել</button>
-        <button class="btn">Չեմ ծխում</button>
-        <button class="btn">Այլ պատճառ</button>
+        <button class="btn">I receive too many messages</button>
+        <button class="btn">I'm not interested is such offers</button>
+        <button class="btn">I never subscribed</button>
+        <button class="btn">I do not smoke</button>
+        <button class="btn">Other reasons, please specify</button>
       </div>
       
     </div>
