--- a/page3.html
+++ b/page3.html
@@ -24,18 +24,15 @@
             <div class="swiper-slide item-slider">
               <img src="img/superSlimsFantasy.png" alt="slider-image" class="slider-image">
               <p class="slider-text">
-                Monte Carlo-ի տուփերի վրա <br>
-                նկատե՞լ եք փոփոխություն։
+                Have you noticed any changes <br>in Monte Carlo packs?
               </p>
             </div>
             <div class="swiper-slide item-slider">
               <img src="img/superSlimsSilk.png" alt="slider-image" class="slider-image">
               <p class="slider-text">
-                Monte Carlo ապրանքանիշի՝ <br>
-                Winston-ի մաս դառնալու <br>
-                գործընթացում ո՞րն է Ձեզ <br>
-                համար ամենակարևոր <br>
-                գործոնը։
+                What’s most important to you when <br>
+                considering the transition from <br>
+                Monte Carlo to Winston?
               </p>
             </div>
           </div>
@@ -44,10 +41,10 @@
       </div>
       <div class="regular-content">
         <div class="buttons-wrap">
-          <button class="btn">ԱՆՓՈՓՈԽ ՀԱՄՆ ՈՒ ՈՐԱԿԸ</button>
-          <button class="btn">ԱՆՓՈՓՈԽ 650 ԴՐԱՄ ԳԻՆԸ</button>
-          <button class="btn">ԹԱՐՄԱՑՎԱԾ ՏՈՒՓԻ ԴԻԶԱՅՆԸ</button>
-          <button class="btn">ՓՈՓՈԽՈՒԹՅՈՒՆՆԵՐԻ ՄԱՍԻՆ <br> ՄԱՆՐԱՄԱՍՆ ՏԵՂԵԿՈՒԹՅՈՒՆ ՍՏԱՆԱԼԸ</button>
+          <button class="btn">CONSISTENT TASTE AND QUALITY</button>
+          <button class="btn">UNCHANGING 650 AMD PRICING</button>
+          <button class="btn">UPDATED BRANDING AND DESIGN</button>
+          <button class="btn">CLEAR COMMUNICATION ABOUT <br>THE CHANGE</button>
         </div>
       </div>
     </div>
